Bug 102897 - Separate bind points are not implemented correctly
Summary: Separate bind points are not implemented correctly
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Vulkan/intel (show other bugs)
Version: git
Hardware: All All
: medium normal
Assignee: Intel 3D Bugs Mailing List
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-20 11:07 UTC by Józef Kucia
Modified: 2018-01-24 08:29 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Józef Kucia 2017-09-20 11:07:18 UTC
Binding descriptors sets for the compute pipeline should not disturb bindings for the graphics pipeline and vice versa. The Vulkan spec states:
"pipelineBindPoint is a VkPipelineBindPoint indicating whether the descriptors will be used by graphics pipelines or compute pipelines. There is a separate set of bind points for each of graphics and compute, so binding one does not disturb the other."

Crucible: https://lists.freedesktop.org/archives/piglit/2017-September/022949.html
Comment 1 Jason Ekstrand 2017-12-16 01:11:01 UTC
There is a patch series on the mailing list to fix this now:

https://patchwork.freedesktop.org/patch/193631/

It passes your crucible test.  I'm sorry it took so long. :-(
Comment 2 Józef Kucia 2017-12-16 10:05:21 UTC
(In reply to Jason Ekstrand from comment #1)
> There is a patch series on the mailing list to fix this now:
> 
> https://patchwork.freedesktop.org/patch/193631/

The series fixes the problem. Thanks!
Comment 3 Jason Ekstrand 2018-01-24 08:29:09 UTC
This is fixed upstream by the following commit:

commit 97f96610c8b858267c121c0ad6ffc630e2aafc09
Author: Jason Ekstrand <jason.ekstrand@intel.com>
Date:   Fri Dec 15 14:02:27 2017 -0800

    anv: Separate compute and graphics descriptor sets
    
    The Vulkan spec says:
    
        "pipelineBindPoint is a VkPipelineBindPoint indicating whether the
        descriptors will be used by graphics pipelines or compute pipelines.
        There is a separate set of bind points for each of graphics and
        compute, so binding one does not disturb the other."
    
    Up until now, we've been ignoring the pipeline bind point and had just
    one bind point for everything.  This commit separates things out into
    separate bind points.
    
    Tested-by: Józef Kucia <joseph.kucia@gmail.com>
    Reviewed-by: Topi Pohjolainen <topi.pohjolainen@intel.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=102897
    Cc: "18.0" <mesa-stable@lists.freedesktop.org>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.